@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man 2.22 (Pod::Simple 3.07)
+.\" Automatically generated by Pod::Man 2.22 (Pod::Simple 3.13)
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "thruk 3"
-.TH thruk 3 "2013-02-15" "perl v5.10.1" "User Contributed Perl Documentation"
+.TH thruk 3 "2013-02-28" "perl v5.10.1" "User Contributed Perl Documentation"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -211,6 +211,8 @@ script has the following arguments
 \&                                    (only needed during package installation)
 \&      \- uninstallcron               remove all thruk cronjobs
 \&                                    (only needed during package deinstallation)
+\&      \- compile                     compile templates for faster access
+\&
 \&    Testing Commands
 \&      \- listbackends                list all backends
 \&      \- listhosts                   list hostnames
